# rust-ini

./: .gitignore  .travis.yml  Cargo.toml  README.md  README.rst  flake.nix
.circleci/: config.yml
example/: test.rs
examples/: conf.ini  test.rs
src/: ini.rs  lib.rs
src/libini/: .gitignore  .ini.rs.swp  .test.rs.swp  conf.ini  ini.rs  lib.rs  test.rs
