[package]
name = "rust-ini"
version = "0.9.5"
authors = ["Y. T. Chung <zonyitoo@gmail.com>"]
description = "An Ini configuration file parsing library in Rust"
repository = "https://github.com/zonyitoo/rust-ini"
keywords = ["ini", "configuration", "conf", "cfg"]
license = "MIT"

[lib]
name = "ini"
test = true

[dependencies]
log = "^0.3.5"
