[package]
name = "rust-ini"
version = "0.14.0"
authors = ["Y. T. Chung <zonyitoo@gmail.com>"]
description = "An Ini configuration file parsing library in Rust"
repository = "https://github.com/zonyitoo/rust-ini"
documentation = "https://docs.rs/rust-ini/"
keywords = ["ini", "configuration", "conf", "cfg"]
license = "MIT"
edition = "2018"

[lib]
name = "ini"
test = true

[dependencies]
multimap = "0.8"
indexmap = { version = "1.3", optional = true }

[features]
default = []
preserve_order = ["indexmap"]
