[package]
name = "rust-ini"
version = "0.14.0"
authors = ["Y. T. Chung <zonyitoo@gmail.com>"]
description = "An Ini configuration file parsing library in Rust"
repository = "https://github.com/zonyitoo/rust-ini"
documentation = "https://docs.rs/rust-ini/"
keywords = ["ini", "configuration", "conf", "cfg"]
license = "MIT"
edition = "2018"

[lib]
name = "ini"
test = true

[dependencies]
multimap = "0.8"
indexmap = { version = "1.3", optional = true }

[features]
default = []
# Sections and Properties will preserve order of keys in the original input
preserve_order = ["indexmap"]
# Allowing inline comments
#
# For example:
#
# [A]
# Key=value # COMMENTS
#
# This was a default feature < 0.14.0
inline_comment = []
